--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,11 +3,12 @@ name: Publish Docker Images
 on:
   push:
     tags:
-      - '*'
+      - "*"
   workflow_dispatch:
 
 env:
-  REGISTRY: ghcr.io
+  GHCR_REGISTRY: ghcr.io
+  ACR_REGISTRY: consulteermcpacr.azurecr.io
 
 jobs:
   build-and-push:
@@ -15,6 +16,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -28,7 +31,8 @@ jobs:
       - name: Determine image metadata
         id: meta
         env:
-          REGISTRY: ${{ env.REGISTRY }}
+          GHCR_REGISTRY: ${{ env.GHCR_REGISTRY }}
+          ACR_REGISTRY: ${{ env.ACR_REGISTRY }}
         run: |
           set -euo pipefail
           owner_lower=$(echo "${GITHUB_REPOSITORY_OWNER}" | tr '[:upper:]' '[:lower:]')
@@ -36,25 +40,37 @@ jobs:
 
           if [[ "${ref}" == refs/tags/* ]]; then
             ref_name="${ref#refs/tags/}"
-            cli_tags=$(printf "%s\n%s" \
-              "${REGISTRY}/${owner_lower}/moco-mcp-cli:latest" \
-              "${REGISTRY}/${owner_lower}/moco-mcp-cli:${ref_name}")
-            http_tags=$(printf "%s\n%s" \
-              "${REGISTRY}/${owner_lower}/moco-mcp-http:latest" \
-              "${REGISTRY}/${owner_lower}/moco-mcp-http:${ref_name}")
+
+            cli_tags=$(printf "%s\n%s\n%s\n%s" \
+              "${GHCR_REGISTRY}/${owner_lower}/moco-mcp-cli:latest" \
+              "${GHCR_REGISTRY}/${owner_lower}/moco-mcp-cli:${ref_name}" \
+              "${ACR_REGISTRY}/moco-mcp-cli:latest" \
+              "${ACR_REGISTRY}/moco-mcp-cli:${ref_name}")
+
+            http_tags=$(printf "%s\n%s\n%s\n%s" \
+              "${GHCR_REGISTRY}/${owner_lower}/moco-mcp-http:latest" \
+              "${GHCR_REGISTRY}/${owner_lower}/moco-mcp-http:${ref_name}" \
+              "${ACR_REGISTRY}/moco-mcp-http:latest" \
+              "${ACR_REGISTRY}/moco-mcp-http:${ref_name}")
           else
             ref_name="${GITHUB_HEAD_REF:-${ref#refs/heads/}}"
             sanitized=$(echo "${ref_name}" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9._-]/-/g')
-            cli_tags="${REGISTRY}/${owner_lower}/moco-mcp-cli:${sanitized}"
-            http_tags="${REGISTRY}/${owner_lower}/moco-mcp-http:${sanitized}"
+
+            cli_tags=$(printf "%s\n%s" \
+              "${GHCR_REGISTRY}/${owner_lower}/moco-mcp-cli:${sanitized}" \
+              "${ACR_REGISTRY}/moco-mcp-cli:${sanitized}")
+
+            http_tags=$(printf "%s\n%s" \
+              "${GHCR_REGISTRY}/${owner_lower}/moco-mcp-http:${sanitized}" \
+              "${ACR_REGISTRY}/moco-mcp-http:${sanitized}")
           fi
 
-          echo "owner_lower=${owner_lower}" >> "${GITHUB_OUTPUT}"
           {
             echo "cli_tags<<EOF"
             echo "${cli_tags}"
             echo "EOF"
           } >> "${GITHUB_OUTPUT}"
+
           {
             echo "http_tags<<EOF"
             echo "${http_tags}"
@@ -64,11 +80,21 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ env.GHCR_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push CLI image
+      - name: Azure login (OIDC)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Log in to Azure Container Registry
+        run: az acr login --name consulteermcpacr
+
+      - name: Build and push CLI image (GHCR + ACR)
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -77,7 +103,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.cli_tags }}
 
-      - name: Build and push HTTP image
+      - name: Build and push HTTP image (GHCR + ACR)
         uses: docker/build-push-action@v6
         with:
           context: .
